# metagen

./: LICENSE.md  README.md
sample/cpp/MetagenProto/: CMakeLists.txt
sample/cpp/MetagenProto/src/: QueryBuilder.cpp  QueryBuilder.h  main.cpp
sample/cpp/MetagenProto/src/sql/: ExpressionBuilder.cpp  ExpressionBuilder.h  ExpressionBuilderApi.cpp  ExpressionBuilderApi.h  ExpressionBuilderImpl.cpp  ExpressionBuilderImpl.h  QueryBuilder.cpp  QueryBuilder.h  QueryBuilderApi.cpp  QueryBuilderApi.h  QueryBuilderImpl.cpp  QueryBuilderImpl.h  Types.cpp  Types.h
sample/java/MetagenProto/src/com/rushingvise/metagen/: Main.java
sample/java/MetagenProto/src/com/rushingvise/metagen/sql/: ExpressionBuilder.java  ExpressionBuilderApi.java  ExpressionBuilderImpl.java  QueryBuilder.java  QueryBuilderApi.java  QueryBuilderImpl.java  Types.java
sample/java/MetagenProto/src/com/rushingvise/metagen/utils/: Utils.java
specs/: sql.xml
src/metagen/: .gitignore  pom.xml
src/metagen/src/main/java/com/rushingvise/metagen/: Main.java
src/metagen/src/main/java/com/rushingvise/metagen/compiler/: BuilderPatternCompiler.java  GraphCompiler.java  GraphCompilerException.java
src/metagen/src/main/java/com/rushingvise/metagen/generator/: CodeGenerator.java  CodeGeneratorException.java  CodeModel.java  CppCodeGenerator.java  JavaCodeGenerator.java
src/metagen/src/main/java/com/rushingvise/metagen/interpreter/: BuilderPatternInterpreter.java  GraphInterpreter.java  GraphInterpreterException.java  StructureInterpreter.java  StructureInterpreterException.java
(+8 files in other folders)
